pinterest icon 만들어보기

--- a/app/assets/scss/color.scss
+++ b/app/assets/scss/color.scss
@@ -1,4 +1,4 @@
 @import '~open-color/open-color';
 
-$brand-color: #e60023;
-$brand-color-1: #42b883;
+$pinterest-color: #e60023;
+$vue-color: #42b883;
